# mmtk-art

./: Android.bp  README.md
art/: mmtk.h
mmtk/: Cargo.toml
mmtk/src/: abi.rs  active_plan.rs  api.rs  collection.rs  gc_trigger.rs  lib.rs  object_model.rs  object_scanning.rs  reference_glue.rs  scanning.rs
profiles/apex/: 2025-08-27-ss_acrobat_default_6028294272107285374_0.profraw  2025-09-01-ix_acrobat_default_6028294272107283326_0.profraw  2025-09-06-ix_acrobat_default_14597297066117636288_0.profraw  2025-09-06-ss_acrobat_default_14597297066117636288_0.profraw  2025-09-26-multi_ix_acrobat_default_8261791933313255623_0.profraw  2025-09-26-multi_ix_acrobat_default_8265875367035829447_0.profraw  2025-09-26-multi_ss_acrobat_default_8261791933313255623_0.profraw  2025-09-26-multi_ss_acrobat_default_8265875367035829447_0.profraw  2025-09-26-single_ix_acrobat_default_8066394225124393159_0.profraw  2025-09-26-single_ix_acrobat_default_8265875367035829447_0.profraw  2025-09-26-single_ss_acrobat_default_8066394225124393159_0.profraw  2025-09-26-single_ss_acrobat_default_8265875367035829447_0.profraw  ix_merged.profdata  merged.profdata  ss_ix_merged.profdata  ss_ix_multi_merged.profdata
profiles/headless/: 2025-08-27-ss_gcbench-default_6028294257074899838_0.profraw  2025-09-01-ix_gcbench_default_6028294257074897790_0.profraw  2025-09-02-ix_gcbench_default_6028476798554738558_0.profraw  2025-09-02-nogc_gcbench_default_6028476798554738558_0.profraw  2025-09-02-ss_gcbench_default_6028476798554738558_0.profraw  ix_merged.profdata  merged.profdata  ss_ix_merged.profdata  (+5 more)
