[package]
name = "mmtk-art"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmtk_art"
# Be careful - Link-Time Optimisation (LTO) is only allowed for certain crate types
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.1"
mmtk = "0.18.0"